# project-vortex

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  llms.txt  pyproject.toml  test_output_backtester.txt  test_results_debug.txt  test_results_details.txt  test_results_vectorized_debug.txt
.github/workflows/: ci.yml
backend/api/: main.py
backend/core/: Config.py  RateLimiter.py  VortexLogger.py
backend/scitus/: BaseStrategy.py  BollingerBandsStrategy.py  HMARSIStrategy.py  MACDStrategy.py  StrategyFactory.py
backend/tests/: test_adjustment_engine.py  test_base_controller.py  test_binance_extractor.py  test_binance_hd_transformer_contract.py  test_coingecko_extractor.py  test_coingecko_extractor_contract.py  test_composite_voting_strategies.py  test_crypto_controller.py  test_crypto_controller_contract.py  test_data_queue.py  test_event_backtester.py  test_execution_handler.py  test_extractor_factory.py  test_feature_registry.py  test_feature_store.py  test_historical_data_store.py  test_local_cache_client_contract.py  test_metrics_calculator.py  test_migration_scripts.py  test_order_models.py  test_parquet_writer.py  test_polygon_extractors_contract.py  (+11 more)
docs/: Gemini_analysis.txt  Quant Trading Backtester and Alpha Stack  README.md  backtester_implementation_plan.md  class_diagram.puml  data_flow_diagram.puml  engineering-guidelines.md  product-definitions.md  production_readiness_plan.md  project_diagrams.md  quant_stack_implementation_plan.md
notebooks/: 01_data_exploration.ipynb  02_backtest_example.ipynb
(+83 files in other folders)
