[tool.pytest.ini_options]
# Where pytest looks for tests
testpaths = ["backend/tests"]

# Add project root (.) to sys.path so `import backend...` works
pythonpath = ["."]

# Custom markers
markers = [
    "contract: marks tests that hit real external APIs",
    "unit: marks fast unit tests with mocks",
]

# Optional: fail on unknown markers
addopts = "-ra --strict-markers"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.7"

[project]
name = "project-vortex"
version = "0.1.0"
description = "Financial Dashboard with love"
authors = [{ name = "dgkngk" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "influxdb-client (>=1.49.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
